# advent2023

./: Cargo.toml  README.md
src/: lib.rs  log.rs
src/tasks/: day1.rs  day2.rs  mod.rs  solutions.rs
src/tasks/day1/: task1.rs  task2.rs
src/tasks/day2/: mod.rs  task1.rs  task2.rs
src/tasks/day3/: task1.rs  task2.rs
src/utils/: file.rs  mod.rs  string.rs
